--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 * {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
     margin: 0;
