--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@
     box-sizing: border-box;
 }
 
-head {
-    height: 0;
+body {
+    background-color: rgb(250, 250, 250);
 }
 
-.text {
-    font-family: "Roboto", sans-serif;
+head {
+    height: 0;
 }
 
 img {
@@ -29,6 +29,13 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    height: 30px;
+}
+
+.text {
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+    font-size: 12px;
 }
