--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(255, 255, 255);
 }
 
 head {
@@ -38,4 +38,5 @@ img {
     font-family: "Roboto", sans-serif;
     margin: 0;
     font-size: 12px;
+    font-weight: bolder;
 }
